--- a/homepage/static/ngTemplates/app.homepage.examresults.html
+++ b/homepage/static/ngTemplates/app.homepage.examresults.html
@@ -82,9 +82,11 @@
   </div>
   <div style="margin-top:2em;text-align:center;">
     <button class="btnaction1" style="min-width:10%;" ng-click=""><b>View Score</b></button>
-    <div class="text-center">
-      <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="labels" min-width="50%" height="50vh" chart-series="series"> 
-      </canvas>
+    <div class="container text-center">
+      <div class="col-md-12" style="margin-top:2em;border:1px solid #000;">
+        <canvas id="pie-chart" width="800" height="450"></canvas>
+
+      </div>
     </div>
   </div>
 </div>
