--- a/finance/static/ngTemplates/app.finance.accounts.transaction.html
+++ b/finance/static/ngTemplates/app.finance.accounts.transaction.html
@@ -37,7 +37,7 @@
           <input type="text " class="form-control" ng-model="form.externalConfirmationID">
         </div>
       </div>
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <div class="form-group">
           <label>API</label>
           <input type="text " class="form-control" ng-model="form.api">
@@ -48,7 +48,7 @@
           <label>API Call Params</label>
           <input type="text " class="form-control" ng-model="form.apiCallParams">
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="col-md-12 text-center" style="padding-top:25px">
