--- a/projects/static/ngTemplates/app.projects.new.html
+++ b/projects/static/ngTemplates/app.projects.new.html
@@ -1,41 +1,54 @@
 <div class="col-md-4" style="margin-top:10px;">
-    <div class="btn-group btn-group-sm">
-        <button type="button" class="btn btn-default" ng-click="reset()">
+  <div class="btn-group btn-group-sm">
+    <button type="button" class="btn btn-default" ng-click="resetForm()">
             Reset
         </button>
-        <button type="button" class="btn btn-default" ng-click="$state.go('projectManagement.projects')">
+    <button type="button" class="btn btn-default" ng-click="$state.go('projectManagement.projects')">
             Back <i class="fa fa-mail-reply"></i>
         </button>
-        <button type="button" class="btn btn-primary" ng-click="postProject()">
+    <button type="button" class="btn btn-primary" ng-click="postProject()">
             Save <i class="fa fa-floppy-o"></i>
         </button>
-    </div>
-    <h3 ng-if="form.title.length==0" class="text-muted" style="word-wrap:break-word;">Untitled..</h3>
-    <h3 style="word-wrap:break-word;">{{form.title}}</h3>
-    <hr>
-    <users-Field data="form.team" url="/api/HR/userSearch/" col="6" label="team"></users-Field>
+  </div>
+  <h3 ng-if="form.title.length==0" class="text-muted" style="word-wrap:break-word;">Untitled..</h3>
+  <h3 style="word-wrap:break-word;">{{form.title}}</h3>
+  <hr>
+  <users-Field data="form.team" url="/api/HR/userSearch/" col="6" label="team"></users-Field>
 </div>
 <div class="col-md-8" style="position:relative; min-height:90vh;top:0px;right:0px;padding:0px;">
-    <div style="overflow:auto;height:100%;position:absolute;width:100%;border-left:solid 3px #eee;padding:20px;">
-        <div class="form-group" style="margin-top:10px;">
-          <label>Title</label>
-          <input type="text" ng-model="form.title" class="form-control" placeholder="Title..">
-        </div>
-        <div class= "form-group col-md-12" style="padding:0px;">
-          <label class="control-label col-sm-2" style="margin-top:35px;padding:0px;">Due date</label>
-          <div class="col-md-4">
-            <div class="input-group" style="margin-top:35px;">
-              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.dueDate" is-open="status.opened"  />
-              <span class="input-group-btn">
+  <div style="overflow:auto;height:100%;position:absolute;width:100%;border-left:solid 3px #eee;padding:20px;">
+    <div class="col-md-12">
+      <div class="form-group" style="margin-top:10px;">
+        <label>Title</label>
+        <input type="text" ng-model="form.title" class="form-control" placeholder="Title..">
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label>Due date</label>
+        <div class="input-group">
+          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.dueDate" is-open="status.opened" />
+          <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
-            </div>
-          </div>
         </div>
-        <div class="form-group">
-          <label>Description</label>
-          <textarea class="form-control" rows="5" cols="40" placeholder="Description" ng-model="form.description"></textarea>
-        </div>
-        <media-Field data="data.files" url="/api/projects/media/"></media-Field>
+      </div>
     </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label>Cost Center</label>
+        <input uib-typeahead="cc as cc.name for cc in ccSearch($viewValue)" ng-model="form.costCenter" type="text" class="form-control" placeholder="Search By Cost Center Name">
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="form-group">
+        <label>Description</label>
+        <textarea class="form-control" rows="5" cols="40" placeholder="Description" ng-model="form.description"></textarea>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <media-Field data="data.files" url="/api/projects/media/"></media-Field>
+    </div>
+  </div>
 </div>
