--- a/clientRelationships/static/ngTemplates/app.clientRelationships.customer.form.html
+++ b/clientRelationships/static/ngTemplates/app.clientRelationships.customer.form.html
@@ -44,7 +44,7 @@
       <input type="text " class="form-control" ng-model="form.cin">
     </div>
     <div class="form-group">
-      <label>TIN</label>
+      <label>GSTIN</label>
       <input type="text " class="form-control" ng-model="form.tin">
     </div>
     <div class="form-group">
