--- a/finance/static/ngTemplates/app.finance.vendor.form.html
+++ b/finance/static/ngTemplates/app.finance.vendor.form.html
@@ -71,7 +71,7 @@
       <input type="text " class="form-control" ng-model="form.service.cin">
     </div>
     <div class="form-group">
-      <label>TIN</label>
+      <label>GSTIN</label>
       <input type="text " class="form-control" ng-model="form.service.tin">
     </div>
     <div class="form-group">
