--- a/clientRelationships/static/ngTemplates/app.clientRelationships.contact.form.html
+++ b/clientRelationships/static/ngTemplates/app.clientRelationships.contact.form.html
@@ -147,7 +147,7 @@
           <input type="text " class="form-control" ng-model="form.company.cin">
         </div>
         <div class="form-group">
-          <label>TIN</label>
+          <label>GSTIN</label>
           <input type="text " class="form-control" ng-model="form.company.tin">
         </div>
         <div class="form-group">
