--- a/clientRelationships/static/ngTemplates/app.clientRelationships.update.form.html
+++ b/clientRelationships/static/ngTemplates/app.clientRelationships.update.form.html
@@ -39,7 +39,7 @@
       <input type="text" class="form-control" ng-model="form.rate">
     </div>
     <div class="form-group">
-      <label>TIN</label>
+      <label>GSTIN</label>
       <input type="text" class="form-control" ng-model="form.tin">
     </div>
     <label>Closing Date</label>
