--- a/POS/static/ngTemplates/app.deliveryCenter.orders.html
+++ b/POS/static/ngTemplates/app.deliveryCenter.orders.html
@@ -3,7 +3,7 @@
     <div class="row" ng-controller="app.deliveryCenter.orders.online">
       <div class="col-md-12">
         <div class="col-md-4" ng-repeat="data in invData track by $index" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-          <div class="container-fluid card" style="cursor:pointer;padding-bottom:10px;border-radius:20px" ng-click="rowActionClicked($index,'info')">
+          <div class="container-fluid card {{data.approved ? 'bg-green' : ''}}" style="cursor:pointer;padding-bottom:10px;border-radius:20px" ng-click="rowActionClicked($index,'info')">
             <div class="row" style="border-bottom: 1px solid #dedede;">
               <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
               <span class="text-center"><h4>{{data.created | date : dd-MMM-yyyy}}</h4></span>
