--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.item.html
@@ -1,5 +1,5 @@
 <div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;"  ng-controller="businessManagement.ecommerce.orders.item">
-  <div class="container-fluid card" style="padding-bottom:10px;" ng-click="rowActionClicked('info')">
+  <div class="container-fluid card {{data.approved ? 'bg-green':''}}" style="padding-bottom:10px;" ng-click="rowActionClicked('info')">
     <div class="row" style="border-bottom: 1px solid #dedede;">
       <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
       <span class="text-center"><h3>{{data.created | date : dd-MMM-yyyy}}</h3></span>
