--- a/finance/static/ngTemplates/app.finance.costCenter.form.html
+++ b/finance/static/ngTemplates/app.finance.costCenter.form.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <label>Bank Name</label>
+          <label>Account</label>
           <input uib-typeahead="acc as getAccountName(acc) for acc in accountSearch($viewValue)" ng-model="form.account" type="text" class="form-control" placeholder="Search By Account Number">
         </div>
       </div>
