--- a/finance/static/ngTemplates/app.finance.expenses.html
+++ b/finance/static/ngTemplates/app.finance.expenses.html
@@ -36,7 +36,7 @@
           <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
         </uib-tab-heading>
         <div ng-if="tab.app == 'edit'">
-          <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.form.html'"></div>
+          <div ng-include="'/static/ngTemplates/app.finance.purchaseOrder.form.html'"></div>
         </div>
         <div ng-if="tab.app == 'details'">
           <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.explore.html'"></div>
