--- a/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
@@ -15,7 +15,7 @@
           </div>
           <div class="form-group">
             <label>Contact Number</label>
-            <input type="text " class="form-control" ng-model="form.number">
+            <input type="text " class="form-control" ng-model="form.phone">
           </div>
           <div class="form-group">
             <label>Contact Email</label>
@@ -62,7 +62,7 @@
 
         <div class="form-group">
           <label>Project</label>
-          <input type="text " class="form-control" ng-model="form.pincode">
+          <input type="text" class="form-control" ng-model="form.project" uib-typeahead="project as project.title for project in projectSearch($viewValue)">
         </div>
 
         <br>
@@ -73,20 +73,20 @@
 
         <div class="form-group">
           <label>Cost Center</label>
-          <input type="text " class="form-control" ng-model="form.pincode">
+          <input type="text" class="form-control" ng-model="form.costcenter" uib-typeahead="cost as cost.name for cost in costCenterSearch($viewValue)">
         </div>
 
         <br>
         <br>
 
-        <div class="row text-center">
+        <!-- <div class="row text-center">
           <span>OR</span>
         </div>
 
         <div class="form-group">
           <label>Business Unit</label>
-          <input type="text " class="form-control" ng-model="form.pincode">
-        </div>
+          <input type="text " class="form-control" ng-model="form.bussinessunit">
+        </div> -->
       </div>
 
 
