--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -4,8 +4,13 @@
 </div>
 
 <div class="bg-white My_container" style="" ng-if="!loadingData&&isTableView">
+
+  <div ng-if="noDataDialouge" style="font-size: 30px;text-align:center;position:fixed;top:40%;right:50%">
+    No data Available
+  </div>
+
   <!-- <breadcrumb></breadcrumb> -->
-          <div class="Left_container">
+          <div ng-if="!noDataDialouge" class="Left_container">
             <table id="myQATable" style="width:100%;">
               <thead>
                 <tr class="">
@@ -13,35 +18,35 @@
                 </tr>
               </thead>
              <tbody>
-             <tr id="id{{$index}}" ng-repeat="data in tableDataAvail" ng-click="doing(data)" style="background-color: {{$index==last?'#f0f0f0':' '}}">
+             <tr id="id{{$index}}" ng-repeat="data in reviewData" ng-click="tabelRowAction(data)" style="background-color: {{$index==lastActiveTR?'#f0f0f0':' '}}">
                <td class="tabel_data">
-                  <img class="table_image" ng-if="data[0].user_id" src="{{data[0].user_id | getDP}}" alt="">
-                  <img class="table_image" ng-if="!data[0].user_id" ng-src="/static/images/avatar04.png" alt="">
+                  <img class="table_image" ng-if="data.user_id" src="{{data.user_id | getDP}}" alt="">
+                  <img class="table_image" ng-if="!data.user_id" ng-src="/static/images/avatar04.png" alt="">
                   <span style="display:inline-block">
-                     <div ng-if="data[0].name">
-                       <span style="font-weight: 500;font-size:90%">{{data[0].name}}</span>
-                       <!-- <span style="font-weight: 400;font-size:75%">{{data[0].company? data[0].company:'-'}}</span> -->
+                     <div ng-if="data.name">
+                       <span style="font-weight: 500;font-size:90%">{{data.name}}</span>
+                       <!-- <span style="font-weight: 400;font-size:75%">{{data.company? data.company:'-'}}</span> -->
                      </div>
 
-                       <span style="font-size:83%">{{data[0].uid}}</span>
-                       <!-- <span ng-if="data[0].chatDuration>0.0" style="font-size:80%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data[0].chatDuration}} Min</span>
+                       <span style="font-size:83%">{{data.uid}}</span>
+                       <!-- <span ng-if="data.chatDuration>0.0" style="font-size:80%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
 
-                       <span ng-if="data[0].customerRating<=3&&data[0].customerRating" style="font-size:80%;margin-right:1rem;color:red">Rating :{{data[0].customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
-                       <span ng-if="data[0].customerRating>3" style="font-size:80%;margin-right:1rem;color:green">Rating :{{data[0].customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span> -->
+                       <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;color:red">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
+                       <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;color:green">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span> -->
 
                      <div>
-                       <span ng-if="data[0].chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data[0].chatDuration}} Min</span>
-                       <span ng-if="data[0].customerRating<=3&&data[0].customerRating" style="font-size:90%;margin-right:1rem;color:red">Rating :{{data[0].customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
-                       <span ng-if="data[0].customerRating>3" style="font-size:90%;margin-right:1rem;color:green">Rating :{{data[0].customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
+                       <span ng-if="data.chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
+                       <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:90%;margin-right:1rem;color:red">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
+                       <span ng-if="data.customerRating>3" style="font-size:90%;margin-right:1rem;color:green">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
                      </div>
                      <div class="tabel_dataStatus" style="font-size:80%">
-                       <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data[0].created|  date : 'dd-MMM-yyyy'}}</span>
-                       <span ng-if="data[0].statusChat=='started'" style="color:green"><b>{{data[0].statusChat|humanize}}</b></span>
-                       <span ng-if="data[0].statusChat=='closed'" style="color:#A40B0B"><b>{{data[0].statusChat|humanize}}</b></span>
-                       <span ng-if="data[0].statusChat=='reviewed'" style="color:brown"><b>{{data[0].statusChat|humanize}}</b></span>
+                       <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}</span>
+                       <span ng-if="data.statusChat=='started'" style="color:green"><b>{{data.statusChat|humanize}}</b></span>
+                       <span ng-if="data.statusChat=='closed'" style="color:#A40B0B"><b>{{data.statusChat|humanize}}</b></span>
+                       <span ng-if="data.statusChat=='reviewed'" style="color:brown"><b>{{data.statusChat|humanize}}</b></span>
                        <span style="float:right;margin-left: 2rem;opacity:0.6;">
-                         <i ng-if="data[0].typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
-                         <i ng-if="data[0].typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                         <i ng-if="data.typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
+                         <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
                        </span>
                      </div>
 
@@ -52,7 +57,7 @@
 
           </table>
 
-          <div ng-if="tableDataAvail.length" style="position:fixed;bottom:0px;padding: 2.5rem;background:#fff" >
+          <div ng-if="reviewData.length" style="position:fixed;bottom:0px;padding: 2rem;background:#fff" >
 
             <span>
               <select ng-model="viewby" ng-change="setItemsPerPage(viewby)">
@@ -88,12 +93,12 @@
               </div>
           </div> -->
 
-        <review-info ng-if="isDetailInfoUpdated&&detailInfoData"  data ="detailInfoData"></review-info>
+        <review-info ng-if="isDetailInfoUpdated&&detailInfoData&&!noDataDialouge"  data ="detailInfoData" ></review-info>
 
         <div class="Right_container">
           <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem">
             <div style="display:block;margin:1rem 0px;">
-              <button type="button" class="btn btn-block btn_gradient" ng-click="setMyView()" style="outline:none">
+              <button type="button" class="btn btn-block btn-primary" ng-click="setMyView()" style="outline:none">
                  <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                    <span>Switch to Table View</span>
                  </i>
@@ -122,7 +127,7 @@
                   </select>
               </div>
               <div class="btn-group-vertical">
-                <button type="button" class="btn" ng-click="filterData()">
+                <button type="button" class="btn btn-primary" ng-click="filterData()">
                   <strong>Filter</strong>
                 </button>
              </div>
@@ -176,7 +181,7 @@
                                            <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
                                            <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
                                           </span>
-                                      <span ng-if="r[0].rating == 2||data[0].rating == 1" class="pull-right">
+                                      <span ng-if="r[0].rating == 2||data.rating == 1" class="pull-right">
                                            <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
                                            <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
                                        </span>
@@ -194,9 +199,9 @@
                     </div>
                     </div>
                   <div class="col-sm-3" >
-                     <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;width:20%;height:100vh;top:5vh;right:0px;padding:20px 25px;box-shadow:-1px -1px 1px #f6f6f6">
+                     <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem;top:5vh">
                        <div style="display:block;margin:10px 0px;">
-                         <button type="button" class="btn btn-block btn_gradient" ng-click="setMyView()" style="outline:none">
+                         <button type="button" class="btn btn-block btn-warning" ng-click="setMyView()" style="outline:none">
                             <i ng-if="!isTableView"class="fa fa-table fa-md"  aria-hidden="true">
                               <span>Switch to Table View</span>
                             </i>
@@ -225,7 +230,7 @@
                              </select>
                          </div>
                          <div class="btn-group-vertical">
-                           <button type="button" class="btn btn_gradient" ng-click="filterData()">
+                           <button type="button" class="btn btn-primary" ng-click="filterData()">
                              <strong>Filter</strong>
                            </button>
                         </div>
