--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -22,11 +22,33 @@
 
   <div class="row">
     <div class="container-fluid">
+      <ul class="nav nav-sidebar" style="width:100%; cursor:pointer ">
+        <li ng-class="{active: $state.is(a.state)}" ng-repeat="a in fixedItems" ng-click="$state.go(a.state)" ng-mouseover="onHover2=true" ng-mouseleave="onHover2=false">
+          <a style="{{ onHover2&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0' : ''}}">
+            <div ng-if="sideMenuVisibility" align="left">
+              <div class="row container-fluid">
+                <div style="display:flex;">
+                  <i style="font-size:1.333333rem" class="fa {{a.icon}} fa-lg"></i>
+                  <span style="">{{a.dispName | humanize}}</span>
+                </div>
+              </div>
+            </div>
+            <div ng-if="!sideMenuVisibility" align="left" style="padding-bottom:2.5rem;overflow-x:visible;"><i class="fa {{a.icon}} fa-lg pull-left" style="padding:0.2rem 1.3rem;"></i>
+              <span style="font-size:1.3rem" ng-if="onHover2" class="pull-right">{{a.dispName | humanize}}</span>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="container-fluid">
       <ul class="nav nav-sidebar" style="width:100%;">
         <li ng-class="{active: $state.includes(a.state)}" ng-repeat="a in apps" ng-mouseover="onHover=true" ng-mouseleave="onHover=false">
           <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0' : ''}}">
             <div ng-if="sideMenuVisibility" align="left">
-              <div class="row container-fluid" >
+              <div class="row container-fluid">
                 <div style="display:flex;">
                   <i style="font-size:1.333333rem" class="fa {{a.icon}} fa-lg"></i>
                   <span style="">{{a.dispName | humanize}}</span>
@@ -41,4 +63,23 @@
       </ul>
     </div>
   </div>
+
+  <ul class="nav nav-sidebar" style="width:100%;position:absolute; bottom:10px; cursor:pointer ">
+    <li ng-mouseover="onHover1=true" ng-mouseleave="onHover1=false">
+      <a href="/logout" style="{{ onHover1&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0' : ''}}">
+        <div ng-if="sideMenuVisibility" align="left">
+          <div class="row container-fluid">
+            <div style="display:flex;">
+              <i style="font-size:1.333333rem" class="fa fa-sign-out fa-lg"></i>
+              <span style="">Logout</span>
+            </div>
+          </div>
+        </div>
+        <div ng-if="!sideMenuVisibility" align="left" style="padding-bottom:2.5rem;overflow-x:visible;"><i class="fa fa-sign-out fa-lg pull-left" style="padding:0.2rem 1.3rem;"></i>
+          <span style="font-size:1.3rem" ng-if="onHover1" class="pull-right">Logout</span>
+        </div>
+      </a>
+    </li>
+  </ul>
+
 </div>
