--- a/homepage/static/ngTemplates/app.customer.knowledgeBase.html
+++ b/homepage/static/ngTemplates/app.customer.knowledgeBase.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-3">
-        <div class="btn btn-block" ng-click="addDoc(-1)" style="font-size:18px ; {{docForm!=none&&docForm.title.length==0? 'background-color:#009efb; color:white':'background-color: #e9e9e9 !important;'   }}">
+        <div class="btn btn-block btn-primary" ng-click="addDoc(-1)" style="font-size:18px ; {{docForm!=none&&docForm.title.length==0? 'background-color:#009efb; color:white':'background-color: #e9e9e9 !important;'   }}">
           Add Document &nbsp;<i class="fa fa-plus fa-lg"></i>
         </div>
       </div>
