--- a/support/static/ngTemplates/app.reviews.explore.html
+++ b/support/static/ngTemplates/app.reviews.explore.html
@@ -1,64 +1,64 @@
 <div ng-controller="app.customerReviews.explore" >
   <div class="row">
+
     <div class="col-sm-9" style="padding:25px;">   <!-- main section -->
 
         <div class="row">
           <div ng-if="video_chat.agent">
             <div class="col-md-4">
-              <video id="vid_agent{{chatThreadData.uid}}" style="width:100%" height="240">
+              <video id="vid_agent{{msgData.uid}}" style="width:100%" height="240">
                     <source ng-src="{{video_chat.visitor}}" type="video/webm">
               </video>
             </div>
             <canvas id="canvas_agent" style="display:none"></canvas>
             <canvas id="canvas_visitor" style="display:none"></canvas>
-            <video id="vid_visitor{{chatThreadData.uid}}" class="col-md-4"height="240">
+            <video id="vid_visitor{{msgData.uid}}" class="col-md-4"height="240">
                 <source ng-src="{{video_chat.agent}}" type="video/webm">
             </video>
             <video id="" class="col-md-4" height="240" controls>
                 <source ng-src="{{screen_video}}" type="video/webm">
             </video>
-         </div>
-
-            <div ng-if="audio_chat.agent">
-              <audio id="aud_agent" >
-                  <source ng-src="{{audio_chat.agent}}" type="audio/mp3">
-              </audio>
-              <audio id="aud_visitor" >
-                  <source ng-src="{{audio_chat.visitor}}" type="audio/mp3">
-              </audio>
-            </div>
-
-         <!-- control bar *********************** -->
-          <div ng-show="video_chat.agent||audio_chat.agent" class="col-md-12" style="background-color:grey;margin:10px -15px">
-            <div class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
-              <i ng-if="!play_pause" ng-click="play_video()" class="fa fa-play" aria-hidden="true"></i>
-              <i ng-if="play_pause" ng-click="pause_video()" class="fa fa-pause" aria-hidden="true"></i>
-            </div>
-            <div class="col-md-5" style="font-size:150%;padding:0px;color:white;text-align:center;">
-              <rzslider rz-slider-model="slider.value"
-              rz-slider-options="slider.options"></rzslider>
-            </div>
-            <div class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
-              <i class="fa fa-volume-up" aria-hidden="true"></i>
-            </div>
-            <div class="col-md-2" style="font-size:150%;padding:0px;color:white;text-align:center;">
-              <rzslider rz-slider-model="vol_slider.value"
-              rz-slider-options="vol_slider.options"></rzslider>
-            </div>
-            <div ng-if="typ=='video'" class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
-              <i ng-click="snap()" class="fa fa-camera" aria-hidden="true"></i>
-            </div>
-            <div ng-if="typ=='video'" class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
-              <i class="fa fa-arrows-alt" aria-hidden="true"></i>
-            </div>
           </div>
 
+          <div ng-if="audio_chat.agent">
+            <audio id="aud_agent" >
+                <source ng-src="{{audio_chat.agent}}" type="audio/mp3">
+            </audio>
+            <audio id="aud_visitor" >
+                <source ng-src="{{audio_chat.visitor}}" type="audio/mp3">
+            </audio>
+         </div>
 
+         <!-- control bar *********************** -->
+        <div ng-show="video_chat.agent||audio_chat.agent" class="col-md-12" style="background-color:grey;margin:10px -15px">
+          <div class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
+            <i ng-if="!play_pause" ng-click="play_video()" class="fa fa-play" aria-hidden="true"></i>
+            <i ng-if="play_pause" ng-click="pause_video()" class="fa fa-pause" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-5" style="font-size:150%;padding:0px;color:white;text-align:center;">
+            <rzslider rz-slider-model="slider.value"
+            rz-slider-options="slider.options"></rzslider>
+          </div>
+          <div class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
+            <i class="fa fa-volume-up" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-2" style="font-size:150%;padding:0px;color:white;text-align:center;">
+            <rzslider rz-slider-model="vol_slider.value"
+            rz-slider-options="vol_slider.options"></rzslider>
+          </div>
+          <div ng-if="typ=='video'" class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
+            <i ng-click="snap()" class="fa fa-camera" aria-hidden="true"></i>
+          </div>
+          <div ng-if="typ=='video'" class="col-md-1" style="font-size:150%;padding:0px;color:white;text-align:center;margin-top:7px">
+            <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+          </div>
+        </div>
         </div>
 
       <!-- message section -->
-      <div class="" style="max-height:700px;margin-bottom:20px;overflow:scroll;display:block">
-        <div class="row col-md-12" ng-repeat="msg in msgData">
+      <div class="" style="max-height:700px;margin-bottom:20px;overflow:scroll">
+
+        <div class="row col-md-12" ng-repeat="msg in fullChatData">
           <div ng-if="!msg.logs" class="container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:5px 10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
             <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;font-size:16px">
               {{msg.message}}</p>
@@ -75,6 +75,7 @@
             <span ng-if="!msg.sentByAgent" style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted">{{msg.created | date : 'hh:mm:a' }}</span>
           </div>
         </div>
+
       </div>
 
         <!-- comment section************* -->
@@ -93,7 +94,7 @@
 
           <div class="" ng-repeat="comment in reviewCommentData" style="margin-top:25px;">
             <div class="col-md-10">
-              <div style="background-color:{{comment.user==msgData[0].user_id? '#ea1515':'#286EFA'}};float:right; color:#fff; margin-top:5px ;border-radius:15px 50px 50px 15px; padding:8px 10px 0px 15px;word-break: break-all !important;">
+              <div style="background-color:{{comment.user==msgData.user_id? '#ea1515':'#286EFA'}};float:right; color:#fff; margin-top:5px ;border-radius:15px 50px 50px 15px; padding:8px 10px 0px 15px;word-break: break-all !important;">
                 <p> {{comment.message}} </p>
               </div>
               <div ng-if="comment.agent_capture">
@@ -102,9 +103,9 @@
               </div>
             </div>
 
-              <img style="width:5rem" ng-if="msgData[0].user_id" src="{{msgData[0].user_id | getDP}}" alt="">
+              <img style="width:5rem" ng-if="msgData.user_id" src="{{msgData.user_id | getDP}}" alt="">
 
-              <p style="font-size:15px;display:inline-block;">{{msgData[0].user_id | getName}}</p>
+              <p style="font-size:15px;display:inline-block;">{{msgData.user_id | getName}}</p>
 
           </div>
 
@@ -114,26 +115,26 @@
 
 
     <div class="col-sm-3">
-      <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;width:20%;padding:20px 30px;box-shadow:-1px -1px 1px #f6f6f6;height:100vh;line-height:2.5">
+      <div class="container-fluid" style="position:fixed;background-color:#f0f0f0;height:100vh;padding:2rem;right:0;width:35rem;top:5vh">
         <h4 style="display:inline-block">Agent Info:</h4>
         <span class="pull-right btn btn-primary" ng-click="showChart()" style="font-size:15px">Change Status</span>
         <div style="margin:15px 0px">
-          <img style="width:5rem" ng-if="msgData[0].user_id" src="{{msgData[0].user_id | getDP}}" alt="">
+          <img style="width:5rem" ng-if="msgData.user_id" src="{{msgData.user_id | getDP}}" alt="">
           <div class="" style="display:inline-block">
-            <p style="font-size:16px;font-weight:700">{{msgData[0].user_id | getName}}</p>
+            <p style="font-size:16px;font-weight:700">{{msgData.user_id | getName}}</p>
           </div>
         </div>
-        <p style="font-size:15px"><strong>Created : </strong>{{msgData[0].created | date : 'dd-MMM-yyyy'}}</p>
-        <p style="font-size:15px" ng-if="msgData[0].chatDuration>0.0"><strong>Chat Duration : </strong>{{msgData[0].chatDuration}} Min</p>
-        <p style="font-size:15px" ng-if="msgData[0].company"><strong>Client : </strong>{{msgData[0].company}}</p>
-        <p style="font-size:15px" ng-if="msgData[0].email"><strong>Visitor's Email : </strong>{{msgData[0].email}}</p>
-        <p style="font-size:15px" ng-if="msgData[0].customerRating"><strong>Rating : </strong>{{msgData[0].customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></p>
-        <p style="font-size:15px" ng-if="msgData[0].customerFeedback"><strong>Feedback : </strong>{{msgData[0].customerFeedback}}</p>
-        <p style="font-size:15px" ng-if="chatThreadData.uid!=none"><strong>Status : </strong>{{chatThreadData.status}}
-          <span ng-if="msgData[0].statusChat!='started'">
-            <span ng-if="msgData[0][msgData[0].statusChat+'By']&&msgData[0][msgData[0].statusChat+'On']">by {{msgData[0][msgData[0].statusChat+'By']}}</span>
-            <span ng-if="msgData[0][msgData[0].statusChat+'On']&&!msgData[0][msgData[0].statusChat+'By']"> by Visitor</span>
-            <span ng-if="msgData[0][msgData[0].statusChat+'On']">on {{msgData[0][msgData[0].statusChat+'On'].split('.')[0].split(' ')[0]}} at {{msgData[0][msgData[0].statusChat+'On'].split('.')[0].split(' ')[1]}}</span>
+        <p style="font-size:15px"><strong>Created : </strong>{{msgData.created | date : 'dd-MMM-yyyy'}}</p>
+        <p style="font-size:15px" ng-if="msgData.chatDuration>0.0"><strong>Chat Duration : </strong>{{msgData.chatDuration}} Min</p>
+        <p style="font-size:15px" ng-if="msgData.company"><strong>Client : </strong>{{msgData.company}}</p>
+        <p style="font-size:15px" ng-if="msgData.email"><strong>Visitor's Email : </strong>{{msgData.email}}</p>
+        <p style="font-size:15px" ng-if="msgData.customerRating"><strong>Rating : </strong>{{msgData.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></p>
+        <p style="font-size:15px" ng-if="msgData.customerFeedback"><strong>Feedback : </strong>{{msgData.customerFeedback}}</p>
+        <p style="font-size:15px" ng-if="msgData.uid!=none"><strong>Status : </strong>{{msgData.status}}
+          <span ng-if="msgData.statusChat!='started'">
+            <span ng-if="msgData[msgData.statusChat+'By']&&msgData[msgData.statusChat+'On']">by {{msgData[msgData.statusChat+'By']}}</span>
+            <span ng-if="msgData[msgData.statusChat+'On']&&!msgData[msgData.statusChat+'By']"> by Visitor</span>
+            <span ng-if="msgData[msgData.statusChat+'On']">on {{msgData[msgData.statusChat+'On'].split('.')[0].split(' ')[0]}} at {{msgData[msgData.statusChat+'On'].split('.')[0].split(' ')[1]}}</span>
          </span>
         </p>
       </div>
