--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -161,33 +161,33 @@
                             <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:15px;">
                                 <div class="row" style="padding:0px 10px; min-height:130px;">
                                   <div class="col-md-8">
-                                    <h6>Agent Name : {{r[0].user_id | getName}}</h6>
-                                    <h6>UID : {{r[0].uid}}</h6>
-                                    <h6>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h6>
-                                    <h6 ng-if="r[0].email">Visitor's Email : {{r[0].email}}</h6>
-                                    <h6 ng-if="r[0].chatDuration!=0">Chat Duration : {{r[0].chatDuration}}</h6>
+                                    <h6>Agent Name : {{r.user_id | getName}}</h6>
+                                    <h6>UID : {{r.uid}}</h6>
+                                    <h6>Date : {{r.created | date : "dd-MMM-yyyy"}}</h6>
+                                    <h6 ng-if="r.email">Visitor's Email : {{r.email}}</h6>
+                                    <h6 ng-if="r.chatDuration!=0">Chat Duration : {{r.chatDuration}}</h6>
                                   </div>
                                   <div class="col-md-4">
                                     <div class="row">
-                                      <span ng-if="r[0].rating == 5" class="pull-right">
+                                      <span ng-if="r.rating == 5" class="pull-right">
                                           <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
                                           <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
                                          </span>
-                                      <span ng-if="r[0].rating == 4" class="pull-right">
+                                      <span ng-if="r.rating == 4" class="pull-right">
                                            <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
                                           <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
                                          </span>
-                                      <span ng-if="r[0].rating == 3" class="pull-right">
+                                      <span ng-if="r.rating == 3" class="pull-right">
                                            <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
                                            <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
                                           </span>
-                                      <span ng-if="r[0].rating == 2||data.rating == 1" class="pull-right">
+                                      <span ng-if="r.rating == 2||data.rating == 1" class="pull-right">
                                            <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
                                            <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
                                        </span>
                                     </div>
                                     <div class="row" style="padding-top:15px;" >
-                                      <span class="pull-right" style="color:#286090 ;font-size:15px">{{r[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
+                                      <span class="pull-right" style="color:#286090 ;font-size:15px">{{r.numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
                                     </div>
                                 </div>
                               </div>
