--- a/support/static/ngTemplates/app.support.review.fullChat.modal.html
+++ b/support/static/ngTemplates/app.support.review.fullChat.modal.html
@@ -1,28 +1,28 @@
 <div class="modal-body">
   <div class="container-fluid">
-    <h3>{{fullChatData[0].uid}}<span class="pull-right"><strong>Status : </strong>{{chatThreadData.status | humanize}}</span></h3><hr>
+    <h3>{{myChatThreadData[0].uid}}<span class="pull-right"><strong>Status : </strong>{{myChatThreadData.status | humanize}}</span></h3><hr>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <div class="row text-center">
           <span style="font-size:20px"><strong>Change Status</strong></span>
         </div>
         <div class="row" style="padding-top:25px">
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Started" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('started')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='started'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Started" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('started')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='started'">
             <strong>Started</strong>
           </div>
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Reviewed" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('reviewed')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='reviewed'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Reviewed" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('reviewed')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='reviewed'">
             <strong>Reviewed</strong>
           </div>
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="EscalatedL1" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('escalatedL1')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='escalatedL1'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="EscalatedL1" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('escalatedL1')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='escalatedL1'">
             <strong>EscalatedL1</strong>
           </div>
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="EscalatedL2" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('escalatedL2')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='escalatedL2'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="EscalatedL2" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('escalatedL2')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='escalatedL2'">
             <strong>EscalatedL2</strong>
           </div>
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Resolved" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('resolved')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='resolved'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Resolved" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('resolved')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='resolved'">
             <strong>Resolved</strong>
           </div>
-          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Archived" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('archived')" confirm-button-type="default" cancel-button-type="default" ng-if="chatThreadData.status !='archived'">
+          <div class="col-md-2 btn btn-primary" style="margin-right:20px"  mwl-confirm title="Archived" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus('archived')" confirm-button-type="default" cancel-button-type="default" ng-if="myChatThreadData.status !='archived'">
             <strong>Archived</strong>
           </div>
         </div>
@@ -30,37 +30,37 @@
     </div>
     <hr>
     <div class="col-md-12">
-      <h4 ng-if="chatThreadData.resolvedBy" style="font-weight:501">
-        <span><span style="background-color:'red'">Resolved On</span> : {{chatThreadData.resolvedOn.split('.')[0].split('T')[0]}} at {{chatThreadData.resolvedOn.split('.')[0].split('T')[1]}} </span>
-        <span class="pull-right"> Resloved By : {{chatThreadData.resolvedBy | getName}}</span>
+      <h4 ng-if="myChatThreadData.resolvedBy" style="font-weight:501">
+        <span><span style="background-color:'red'">Resolved On</span> : {{myChatThreadData.resolvedOn.split('.')[0].split('T')[0]}} at {{myChatThreadData.resolvedOn.split('.')[0].split('T')[1]}} </span>
+        <span class="pull-right"> Resloved By : {{myChatThreadData.resolvedBy | getName}}</span>
       </h4>
-      <h4 ng-if="chatThreadData.reviewedBy" style="font-weight:501">
-        <span>Reviewed On : {{chatThreadData.reviewedOn.split('.')[0].split('T')[0]}} at {{chatThreadData.reviewedOn.split('.')[0].split('T')[1]}} </span>
-        <span class="pull-right"> Reviewed By : {{chatThreadData.reviewedBy | getName}}</span>
+      <h4 ng-if="myChatThreadData.reviewedBy" style="font-weight:501">
+        <span>Reviewed On : {{myChatThreadData.reviewedOn.split('.')[0].split('T')[0]}} at {{myChatThreadData.reviewedOn.split('.')[0].split('T')[1]}} </span>
+        <span class="pull-right"> Reviewed By : {{myChatThreadData.reviewedBy | getName}}</span>
       </h4>
-      <h4 ng-if="chatThreadData.archivedBy" style="font-weight:501">
-        <span>Archived On : {{chatThreadData.archivedOn.split('.')[0].split('T')[0]}} at {{chatThreadData.archivedOn.split('.')[0].split('T')[1]}} </span>
-        <span class="pull-right"> Archived By : {{chatThreadData.archivedBy | getName}}</span>
+      <h4 ng-if="myChatThreadData.archivedBy" style="font-weight:501">
+        <span>Archived On : {{myChatThreadData.archivedOn.split('.')[0].split('T')[0]}} at {{myChatThreadData.archivedOn.split('.')[0].split('T')[1]}} </span>
+        <span class="pull-right"> Archived By : {{myChatThreadData.archivedBy | getName}}</span>
       </h4>
-      <h4 ng-if="chatThreadData.escalatedL1By" style="font-weight:501">
-        <span>EscalatedL1 On : {{chatThreadData.escalatedL1On.split('.')[0].split('T')[0]}} at {{chatThreadData.escalatedL1On.split('.')[0].split('T')[1]}} </span>
-        <span class="pull-right"> EscalatedL1 By : {{chatThreadData.escalatedL1By | getName}}</span>
+      <h4 ng-if="myChatThreadData.escalatedL1By" style="font-weight:501">
+        <span>EscalatedL1 On : {{myChatThreadData.escalatedL1On.split('.')[0].split('T')[0]}} at {{myChatThreadData.escalatedL1On.split('.')[0].split('T')[1]}} </span>
+        <span class="pull-right"> EscalatedL1 By : {{myChatThreadData.escalatedL1By | getName}}</span>
       </h4>
-      <h4 ng-if="chatThreadData.escalatedL2By" style="font-weight:501">
-        <span>EscalatedL2 On : {{chatThreadData.escalatedL2On.split('.')[0].split('T')[0]}} at {{chatThreadData.escalatedL2On.split('.')[0].split('T')[1]}} </span>
-        <span class="pull-right"> EscalatedL2 By : {{chatThreadData.escalatedL2By | getName}}</span>
+      <h4 ng-if="myChatThreadData.escalatedL2By" style="font-weight:501">
+        <span>EscalatedL2 On : {{myChatThreadData.escalatedL2On.split('.')[0].split('T')[0]}} at {{myChatThreadData.escalatedL2On.split('.')[0].split('T')[1]}} </span>
+        <span class="pull-right"> EscalatedL2 By : {{myChatThreadData.escalatedL2By | getName}}</span>
       </h4>
-      <h4 ng-if="chatThreadData.closedOn" style="font-weight:501">
-        <span>Closed On : {{chatThreadData.closedOn.split('.')[0].split('T')[0]}} at {{chatThreadData.closedOn.split('.')[0].split('T')[1]}} </span>
-        <span ng-if="chatThreadData.closedBy" class="pull-right"> Closed By : {{chatThreadData.closedBy | getName}}</span>
-        <span ng-if="!chatThreadData.closedBy" class="pull-right"> Closed By : Visitor</span>
+      <h4 ng-if="myChatThreadData.closedOn" style="font-weight:501">
+        <span>Closed On : {{myChatThreadData.closedOn.split('.')[0].split('T')[0]}} at {{myChatThreadData.closedOn.split('.')[0].split('T')[1]}} </span>
+        <span ng-if="myChatThreadData.closedBy" class="pull-right"> Closed By : {{myChatThreadData.closedBy | getName}}</span>
+        <span ng-if="!myChatThreadData.closedBy" class="pull-right"> Closed By : Visitor</span>
       </h4>
-      <!-- <h5 ng-if="chatThreadData.resolvedBy" style="font-weight:501">Resolved on {{chatThreadData.resolvedOn.split('T')[0]}} by {{chatThreadData.resolvedBy | getName}}</h5>
-      <h5 ng-if="chatThreadData.reviewedBy" style="font-weight:501">Reviewed on {{chatThreadData.reviewedOn.split('T')[0]}} by {{chatThreadData.reviewedBy | getName}}</h5>
-      <h5 ng-if="chatThreadData.archivedBy" style="font-weight:501">Archived on {{chatThreadData.archivedOn.split('T')[0]}} by {{chatThreadData.archivedBy | getName}}</h5>
-      <h5 ng-if="chatThreadData.escalatedL1By" style="font-weight:501">EscalatedL1 on {{chatThreadData.escalatedL1On.split('T')[0]}} by {{chatThreadData.escalatedL1By | getName}}</h5>
-      <h5 ng-if="chatThreadData.escalatedL2By" style="font-weight:501">EscalatedL2 on {{chatThreadData.escalatedL2On.split('T')[0]}} by {{chatThreadData.escalatedL2By | getName}}</h5>
-      <h5 ng-if="chatThreadData.closedBy" style="font-weight:501">Closed on {{chatThreadData.closedOn.split('T')[0]}} by {{chatThreadData.closedBy}}</h5> -->
+      <!-- <h5 ng-if="myChatThreadData.resolvedBy" style="font-weight:501">Resolved on {{myChatThreadData.resolvedOn.split('T')[0]}} by {{myChatThreadData.resolvedBy | getName}}</h5>
+      <h5 ng-if="myChatThreadData.reviewedBy" style="font-weight:501">Reviewed on {{myChatThreadData.reviewedOn.split('T')[0]}} by {{myChatThreadData.reviewedBy | getName}}</h5>
+      <h5 ng-if="myChatThreadData.archivedBy" style="font-weight:501">Archived on {{myChatThreadData.archivedOn.split('T')[0]}} by {{myChatThreadData.archivedBy | getName}}</h5>
+      <h5 ng-if="myChatThreadData.escalatedL1By" style="font-weight:501">EscalatedL1 on {{myChatThreadData.escalatedL1On.split('T')[0]}} by {{myChatThreadData.escalatedL1By | getName}}</h5>
+      <h5 ng-if="myChatThreadData.escalatedL2By" style="font-weight:501">EscalatedL2 on {{myChatThreadData.escalatedL2On.split('T')[0]}} by {{myChatThreadData.escalatedL2By | getName}}</h5>
+      <h5 ng-if="myChatThreadData.closedBy" style="font-weight:501">Closed on {{myChatThreadData.closedOn.split('T')[0]}} by {{myChatThreadData.closedBy}}</h5> -->
     </div>
     <div class="col-md-12">
       <div class="row" ng-repeat="msg in fullChatData">
