--- a/support/static/ngTemplates/app.uiSettings.html
+++ b/support/static/ngTemplates/app.uiSettings.html
@@ -1,4 +1,4 @@
-<div class=" bg-white " style="min-height:94vh;overflowY:">
+<div class=" bg-white " style="min-height:94vh">
   <breadcrumb></breadcrumb>
   <div class="">
     <div class="col-md-5" style="text-align: center;">
