--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -195,6 +195,22 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
+            <label>  Notes (Quotation) : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.quoteNotes}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label>  Notes (PO) : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.poNotes}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
             <label> Net Weight : </label>
           </div>
           <div class="col-md-7 text-center">
