--- a/support/static/ngTemplates/app.inventory.cart.modal.html
+++ b/support/static/ngTemplates/app.inventory.cart.modal.html
@@ -28,7 +28,7 @@
         </tr>
         <tr ng-repeat="v in productsOrdered track by $index">
 
-          <td style="background-color:{{v.total_quantity>0?'':'#d94738'}}">{{$index + 1}}</td>
+          <td style="background-color:{{v.prodQty<=v.total_quantity?'':'#d94738'}}">{{$index + 1}}</td>
             <td><input ng-model="v.part_no" uib-typeahead="product as product.part_no for product in change($viewValue) " type="text" class="form-control-pos text-center"></div></td>
           <!-- <td>{{v.part_no}}</td> -->
           <td>{{v.description_1}}</td>
